--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,4 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested by work!
+Drop me an email if you are interested by my work!
