--- a/about.html
+++ b/about.html
@@ -5,5 +5,6 @@ title: About
 ---
 ## About me
 
-I'm Elie Tournier, student software engineer, contributing in Mesa3D by implementing a double precision floating point library.
+My name is Elie Tournier, I'm a French student in software engineering.
+I contribute to Mesa3D by implementing a library of double precision operations in pure GLSL 1.30 for GPUs using bit twiddling operations and integer math.
 This project is part of the Google Summer of Code.
