--- a/about.html
+++ b/about.html
@@ -8,3 +8,5 @@ title: About
 My name is Elie Tournier, I'm a French student in software engineering.
 I contribute to Mesa3D by implementing a library of double precision operations in pure GLSL 1.30 for GPUs using bit twiddling operations and integer math.
 This project is part of the Google Summer of Code.
+
+When I'm not coding, you'll typically find me in mountain, riding my bike, climbing or skiing.
