--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,5 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested by my work!
+Do not hesitate to drop me an email at <code>tournier.elie@gmail.com</code><br>
+or ping me on IRC, I'm <code>hopetech</code> on freenode, generally on #dri-devel.
