--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@ title: About
 ---
 ## About me
 
-My name is Elie Tournier, I'm a French student in software engineering.
-I contribute to Mesa3D by implementing a library of double precision operations in pure GLSL 1.30 for GPUs using bit twiddling operations and integer math.
-This project is part of the Google Summer of Code.
+My name is Elie Tournier, I'm a French software engineer.<br>
+Currently I work on the graphics stack, mostly on the mesa compiler.<br>
+I started this contribution during the Google Summer of Code '16.<br>
+Most of my code can be found on my [GitHub](https://github.com/Hopetech).
 
 When I'm not coding, you'll typically find me in mountain, riding my bike, climbing or skiing.
